2006-10-17  Philip Van Hoof  <pvanhoof@gnome.org>

	* Merged a lot code. Synced with latest version in CVS
	* Re applied the mmap patch
	* Re applied a few smaller optimisations and fixes
	* Renamed this copy to camel-lite
	* Renamed this copy to libedataserver-lite
	* Made libedataserver-lite a static library
	* Moved the install paths to locations that will not conflict with
	normal camel installs
	* Put this code in libtinymail-camel/camel-lite
	* Removed all generated files

-- original camel & camel-provider 1.2 ---------------------------------------

2006-10-05  Tor Lillqvist  <tml@novell.com>

	Fixes from Steffen Eschenbacher:

	* camel-stream-vfs.c (camel_stream_vfs_finalize): Call
	gnome_vfs_close() on the GnomeVFSHandle *, not close(). (#350576,
	#350885, #358010)

	* camel-url.c (camel_url_new_with_base, camel_url_to_string): On
	Win32, for file: urls, simply call g_filename_{to/from}_uri.
	(#358010) We could do this on all platforms maybe?

2006-09-14  Veerapuram Varadhan  <vvaradhan@novell.com> 

	** Fixes bug #350907

	* camel-filter-search.c: (run_command): Unref GMainContext
	* camel-filter-driver.c: (pipe_to_system): ditto
	
2006-08-28  Veerapuram Varadhan  <vvaradhan@novell.com> 

	** Fixes bug #331099 based on patches by Eric Anholt
	<anholt@FreeBSD.org> and Joe Marcus Clarke <marcus@FreeBSD.org>

	* camel-object.c: (cobject_state_read): Cast the input for
	g_try_malloc to gulong.
	
2006-08-23  Wang Xin  <jedy.wang@sun.com>

	Fixes bug #352109.

	* camel-stream-vfs.c: (stream_read), (stream_write), (stream_seek):
	GnomeVFSFileSize should be used, not ssize_t.

2006-08-23  Srinivasa Ragavan  <sragavan@novell.com>
	
	** Fix for bug #349960 by Daniel Gryniewicz
	
	* camel-stream-vfs.c: (camel_stream_vfs_new_with_uri): Set the excl
	flag to FALSE to over write existing file.

2006-07-24  Veerapuram Varadhan <vvaradhan@novell.com>

	* camel-folder-summary.h: Added CamelFolderMetaSummary structure
	that holds values for meta summary file.
